--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -114,6 +114,7 @@ const { id, currentPath, paths } = Astro.props;
         width: auto;
         height: var(--header-height);
         max-height: 100%;
+        max-width: 100%;
     }
 
     @media only screen and (max-width: 768px) {
