--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,6 +38,10 @@
     --header-height: 100px;
     --header-offset-transparent: 0;
 
+    --mobile-header-background-color: var(--header-background-color);
+    --mobile-header-background-color-bottom: var(--header-background-color-bottom);
+    --mobile-header-color: var(--header-color);
+    
     --border-radius: 0.3rem;
 
     --info-color: 147 205 223;
