Adjust site navigation

--- a/src/components/quicklink/quicklink.astro
+++ b/src/components/quicklink/quicklink.astro
@@ -13,7 +13,7 @@ const new_tab =
         : undefined;
 ---
 
-<a href={link} {...new_tab}>{text}</a>
+<a href={link} {...new_tab}><span>{text}</span></a>
 
 <style lang="scss">
     a {
