--- a/src/components/accordion/accordion.astro
+++ b/src/components/accordion/accordion.astro
@@ -68,6 +68,14 @@ const {title} = Astro.props;
     .accordion.expanded .accordion-heading .accordion-icon svg {
         transform: rotate(-180deg);
     }
+    
+    .accordion {
+        margin-bottom: 2rem;
+    }
+    
+    .accordion:has(+ .accordion) {
+        margin-bottom: 0rem;
+    }
 </style>
 
 <script>
