--- a/src/components/navigation/navigation.astro
+++ b/src/components/navigation/navigation.astro
@@ -2,6 +2,7 @@
 import Section from "@layouts/Section.astro";
 import { getTreeNode } from "@mws-astro/util";
 import type { TreeNode } from "@mws-astro/middleware";
+import Icon from "@shared/icon.astro";
 
 interface Props {
     tree?: TreeNode;
@@ -11,6 +12,7 @@ interface Props {
     depth?: number;
     parent?: boolean;
     hide_cousins?: boolean;
+    icon?: string;
 }
 
 const depth = (Astro.props.depth ?? -1) + 1;
@@ -22,6 +24,7 @@ const {
     collection,
     parent = true,
     hide_cousins = false,
+    icon = "",
 } = Astro.props;
 
 let tree;
@@ -68,6 +71,7 @@ const Wrapper = depth ? Fragment : "nav";
                                         child.selected === 2 ? "true" : "false"
                                     }
                                 >
+                                    {icon && <Icon name={icon} height="1em" />}
                                     {child.title}
                                 </a>
                                 {!!displayChildren && (
@@ -77,6 +81,7 @@ const Wrapper = depth ? Fragment : "nav";
                                             {depth}
                                             {maxDepth}
                                             {hide_cousins}
+                                            {icon}
                                         />
                                     </div>
                                 )}
@@ -93,5 +98,12 @@ const Wrapper = depth ? Fragment : "nav";
         display: block;
         font-size: var(--text-size-medium);
         text-decoration: none;
+    }
+</style>
+
+<style lang="scss" is:global>
+    section.navigation svg {
+        justify-self: center;
+        height: 100%;
     }
 </style>
